fix contrast

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,15 @@ div {
     text-align: right;
 }
 
+#intro {
+    background-color: black;
+}
+
+h1 {
+    background-color: black;
+}
+
+
 #blue {
     background-color: #0000ff;
     text-align: left;
@@ -68,4 +77,5 @@ footer {
     text-align: right;
     padding-bottom: 10px;
     padding-right: 10px;
+    background-color: black;
 }
